--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-native-cookies",
+    "name": "@ais/react-native-cookies",
     "version": "3.2.0",
     "description": "Cookie manager for react native",
     "keywords": ["react", "react native", "react-component", "cookies", "webview", "react-native"],
